# SAPA_CORE

./: .gitignore
CircuitDesigner/: CircuitDesigner.csproj  Designer.Designer.cs  Designer.cs  Designer.resx  GlobalSuppressions.cs  Program.cs  SAPADesigner.Designer.cs  SAPADesigner.cs  SAPADesigner.resx
CommonSNDL/: CommonSNDL.vcxproj  CommonSNDL.vcxproj.filters  chemDefs.cpp  chemDefs.hpp  component_utils.cpp  component_utils.hpp  file_utils.cpp  file_utils.hpp  logger.cpp  string_utils.hpp  symbolTable.hpp  templates.hpp  tokenPage.cpp  tokenPage.hpp  types.cpp  types.hpp
DesignerTest/: UnitTest1.cs
NCAD/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NCAD.csproj
NCircuitDesigner/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
NSemble/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
NSemble/compiler/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Notes/: ZC1.csv
SNDL/: SNDL.vcxproj  SNDL.vcxproj.filters  chemDefs.cpp  config.cpp  config.hpp  file_utils.cpp  file_utils.hpp  logger.cpp  logger.hpp  main.cpp  os_iop.cpp  os_iop.hpp  projectUtils.cpp  projectUtils.hpp  sndl_compiler.cpp  sndl_compiler.h  sndl_compiler.hpp  sndl_lexer.cpp  sndl_lexer.hpp  sndl_parser.cpp  sndl_parser.hpp  string_utils.cpp  string_utils.h  symbolTable.cpp  symbolTable.h  utils.hpp
Sapa/: ProcessManager.cpp  ProcessManager.h  Sapa.cpp  Sapa.sln  Sapa.vcxproj  Sapa.vcxproj.filters
SapaCore/: Error.hpp  FileUtil.cpp  FileUtil.h  NetworkIOAdapter.cpp  NetworkIOAdapter.h  NrnStructures.cpp  NrnStructures.hpp  OS.hpp  (+12 more)
(+199 files in other folders)
